@@ -3182,6 +3182,11 @@ means that only files ending in .c are shown.
      otherwise on the left/top side.
    </para></listitem>
 
+   <listitem><para><function>PanelRemove</function>(<parameter>Side</parameter>,
+     <parameter>Path</parameter>)
+     Remove <parameter>Path</parameter> from the panel on side <parameter>Side</parameter>. If more than one item matches, only one is removed.
+   </para></listitem>
+
    <listitem><para><function>Pinboard</function>([<parameter>Name</parameter>])
      Display pinboard <parameter>Name</parameter> on the desktop background.
      <parameter>Name</parameter> can be a name in Choices (eg,
