@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+06-Oct-2004
+~~~~~~~~~~~
+Added PanelRemove() SOAP call (m0n5t3r).
+
 29-Sep-2004
 ~~~~~~~~~~~
 Force panel to not take focus when using GTK 2.4 (Thomas Leonard).
